# tno-solar-nomad-image

./: docker-compose.yaml  pyproject.toml
configs/: nomad.yaml
